# chess-practice

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  chess_game.py  config.example.json  game_controller.py  main.py  pyproject.toml
.claude/: settings.local.json
assets/: theme.json
assets/sprites/: credits.md
chess/: __init__.py  ai_player.py  board.py  clipboard.py  config.py  constants.py  fen.py  fen_loader.py  game_state.py  move.py  move_executor.py  move_generator.py  notation.py  pgn.py  pgn_loader.py  piece.py  san.py
chess/patterns/: __init__.py  openings.py
chess/patterns/data/: ATTRIBUTION.md  famous_openings.csv
chess/pieces/: __init__.py  bishop.py  king.py  knight.py  pawn.py  queen.py  rook.py
data/: famous_chess_patterns.csv
graphics/: __init__.py  aa_draw.py  arrow_renderer.py  board_renderer.py  captured_pieces_renderer.py  constants.py  icon_loader.py  move_list_renderer.py  opening_renderer.py  piece_renderer.py  piece_sprites.py  sprites.py  trie_visualization.py
graphics/ui/: __init__.py  control_panel.py  credits_dialog.py  fen_dialog.py  menu_bar.py  pgn_dialog.py  promotion_dialog.py  settings_dialog.py  side_panel.py  trie_panel.py
scripts/: convert_lichess_openings.py  export_invalid_openings.py  validate_openings.py
tests/: test_ai_player.py  test_board.py  test_fen.py  test_fen_loader.py  test_game_state.py  test_move_executor.py  test_move_generator.py  test_notation.py  test_openings.py  test_pgn.py  test_pieces.py  test_san.py
tests/fixtures/: test_openings.csv
